fix list item vertical alignment for items without package id

--- a/src/options/pages/blueprints/listView/ListItem.module.scss
+++ b/src/options/pages/blueprints/listView/ListItem.module.scss
@@ -52,13 +52,11 @@
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
-  height: 22px;
 }
 
 .packageId {
   font-size: 14px;
   color: #5a4e71;
-  height: 22px;
   font-weight: 400;
   overflow: hidden;
   white-space: nowrap;
